--- a/Capstone/index.html
+++ b/Capstone/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RetroFuture</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&family=Sarpanch:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div>
     <!-- navbar -->
      <div class="supernav">
         <div class="navbar">
@@ -88,29 +90,143 @@
                 A visionary artist blending Victorian elegance with futuristic innovation. Specializing in steampunk designs that captivate and inspire.
             </div>
         </div>
-    </section>
+    </section> 
+
 
     <section class="services">
         <div class="services-header-div">
-            <h2 class="services-header">
-                What I offer
-            </h2>
+            <h2 class="services-header">What I Offer</h2>
         </div>
         <div class="services-actions">
-            <p class="services-links"></p>
-            <p class="services-links"></p>
-            <p class="services-links"></p>
-            <p class="services-links"></p>
-            <p class="services-links"></p>
-            <p class="services-links"></p>
-            <p class="services-links"></p>
+            <p class="services-links">Custom Steampunk Art</p>
+            <p class="services-links">Mechanical Design</p>
+            <p class="services-links">Retro-Futuristic Photography</p>
+            <p class="services-links">Victorian-Inspired Crafts</p>
+            <p class="services-links">Innovative Gadgetry</p>
+            <p class="services-links">Industrial Installations</p>
+            <p class="services-links">Clockwork Creations</p>
+            <p class="services-links">Brass and Copper Works</p>
+            <p class="services-links">Steam-Powered Devices</p>
+            <p class="services-links">Gothic Accessories</p>
+            
+        </div>
+    </section>
+    
+    <section class="floating-text-div">
+        <div class="empty">
+        </div>
+        <div class="float-div">
+            <h2 class="floating-text">
+                Welcome to my steampunk portfolio, where Victorian elegance meets futuristic innovation. Dive into my world of intricate designs, mechanical marvels, and retro-futuristic creations. Each project is a testament to the timeless charm of the Victorian era, infused with modern ingenuity.            </h2>
         </div>
     </section>
 
-    <!-- footer  -->
-     <footer>
+    <div class="testimonials">
+        <div class="testimonials-header-div">
+            <h2 class="testimonials-header">What Clients Say</h2>
+        </div>
+        <div class="testimonials-holder">
+            <div class="client-holder">
+                <div class="client-detail-holder">
+                    <div class="client-logo-div">
+                        <img src="cu1.png" alt="logo" class="client-logo">
+                    </div>
+                    <div class="client-detail">
+                        <div>
+                            <p class="client-personel">Lysandra Wraith</p>
+                        </div>
+                        <div>
+                            <p class="client-company">Art Curator</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="client-comment">
+                    A true master of steampunk art!
+                </div>
+            </div>
+            <div class="client-holder">
+                <div class="client-detail-holder">
+                    <div class="client-logo-div">
+                        <img src="cu2.png" alt="logo" class="client-logo">
+                    </div>
+                    <div class="client-detail">
+                        <div>
+                            <p class="client-personel">Balthazar Gearwright</p>
+                        </div>
+                        <div>
+                            <p class="client-company">Engineer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="client-comment">
+                    Innovative and inspiring designs.
+                </div>
+            </div>
+            <div class="client-holder">
+                <div class="client-detail-holder">
+                    <div class="client-logo-div">
+                        <img src="cu3.png" alt="logo" class="client-logo">
+                    </div>
+                    <div class="client-detail">
+                        <div>
+                            <p class="client-personel">Evelyn Brassbound</p>
+                        </div>
+                        <div>
+                            <p class="client-company">Historian</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="client-comment">
+                    A blend of history and technology.
+                </div>
+            </div>
+            <div class="client-holder">
+                <div class="client-detail-holder">
+                    <div class="client-logo-div">
+                        <img src="cu4.png" alt="logo" class="client-logo">
+                    </div>
+                    <div class="client-detail">
+                        <div>
+                            <p class="client-personel">Victor Steamson</p>
+                        </div>
+                        <div>
+                            <p class="client-company">Inventor</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="client-comment">
+                    Captivating and unique creations.
+                </div>
+            </div>
+            <div class="client-holder">
+                <div class="client-detail-holder">
+                    <div class="client-logo-div">
+                        <img src="cu1.png" alt="logo" class="client-logo">
+                    </div>
+                    <div class="client-detail">
+                        <div>
+                            <p class="client-personel">M.S. Dhoni</p>
+                        </div>
+                        <div>
+                            <p class="client-company">Thala</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="client-comment">
+                    Absolutely Stunning Work
+                </div>
+            </div>
 
-     </footer>
+        </div>
     </div>
+
+    <footer class="footer">
+        <div class="left-section">
+            <h2 class="footer-left-text">2023 SteampunkPortfolio</h2>
+        </div>
+        <nav class="right-section">
+            <button class="contact-btn">Contact Me</button>
+        </nav>
+    </footer>
 </body>
 </html>
